--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width-device-width, initial-scale=1.0">
+    <title>Path to Success</title>
+</head>
+
 Path to Success
 Unlock your full potential with personalized life coaching
 Menu
@@ -101,3 +110,4 @@ Schedule Now
 Copyright 2024 
 Terms and Conditions
 
+</html>
