--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width-device-width, initial-scale=1.0">
     <title>Path to Success</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
+<header>
 Path to Success
 Unlock your full potential with personalized life coaching
 Menu
@@ -16,41 +18,42 @@ Prices
 Take the First Step
 Our Services
 One-on-One Coaching
+</header>
 
-alt=”teal icon of a smiling face”
+<img src="images/personal-development.png"alt=”teal icon of a smiling face”>
 Personal Development
 Identify and overcome obstacles holding you back from living your best life. Whether it's building confidence, breaking bad habits, or discovering your true purpose, we'll work together to create a clear roadmap for success.
 
 
-alt=”lavender icon of a briefcase”
+<img src="images/career-coaching.png" alt=”lavender icon of a briefcase”>
 Career Coaching
 Feeling stuck in your career? We'll help you clarify your goals, develop a plan for advancement, and build the skills needed to thrive in your professional life.
 
 
-alt=”pink icon of a heart”
+<img src="images/relationship-coaching.png" alt=”pink icon of a heart”>
 Relationship Coaching
 Enhance your relationships with better communication, understanding, and empathy. Whether it's family, friends, or partners, we'll help you build stronger connections.
 
 Group Coaching
 
-alt=”yellow icon of hands clasping”
+<img src="images/supportive-community.png" alt=”yellow icon of hands clasping”>
 Supportive Community
 Join a group of like-minded individuals on a similar journey. Share experiences, gain insights, and grow together in a safe, supportive environment.
 
 
-alt=”teal icon of a clock face”
+<img src="images/focused-session.png" alt=”teal icon of a clock face”>
 Focused Sessions
 Our group coaching sessions focus on specific themes such as confidence-building, time management, or work-life balance. Each session is designed to provide actionable takeaways that you can apply immediately.
 
 Workshops & Seminars
 
-alt=”lavender icon of text conversation”
+<img src="images/interactive-learning.png" alt=”lavender icon of text conversation”>
 Interactive Learning
 Participate in our interactive workshops and seminars that cover a range of topics, from goal setting to stress management. These events are designed to provide practical tools and strategies that you can implement in your daily life.
 
 Online Courses
 
-alt=”pink icon of a curly arrow”
+<img src="images/flexible-learning.png" alt=”pink icon of a curly arrow”>
 Flexible Learning
 Access our online courses at your convenience. With video lessons, downloadable resources, and exercises, you can learn at your own pace from the comfort of your home.
 
