Add Footer and Main
Add Footer and Main

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <header>
-Path to Success
+<h1>Path to Success</h1>
 Unlock your full potential with personalized life coaching
 Menu
 Our Services
@@ -20,6 +20,7 @@ Our Services
 One-on-One Coaching
 </header>
 
+<main>
 <img src="images/personal-development.png"alt=”teal icon of a smiling face”>
 Personal Development
 Identify and overcome obstacles holding you back from living your best life. Whether it's building confidence, breaking bad habits, or discovering your true purpose, we'll work together to create a clear roadmap for success.
@@ -103,14 +104,16 @@ Single Workshop
 $150
 Webinar Series
 $250
+</main>
 
-
+<footer>
 Take the First Step Today
 Your journey to a more fulfilling life begins with a single step. Book a free 30-minute consultation today to discover how our coaching services can help you achieve your goals. Let's work together to create the life you've always dreamed of!
 
 Schedule Now
 
-Copyright 2024 
-Terms and Conditions
+<small>Copyright 2024</small> 
+<small>Terms and Conditions</small>
+</footer>
 
 </html>
