--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 
+<body>
 <header>
 <h1>Path to Success</h1>
 Unlock your full potential with personalized life coaching
@@ -16,55 +17,57 @@ Our Services
 Why Choose Us
 Prices
 Take the First Step
-Our Services
-One-on-One Coaching
 </header>
 
 <main>
+<h2>Our Services</h2>
+<h3>One-on-One Coaching</h3>
+
 <img src="images/personal-development.png"alt=”teal icon of a smiling face”>
-Personal Development
-Identify and overcome obstacles holding you back from living your best life. Whether it's building confidence, breaking bad habits, or discovering your true purpose, we'll work together to create a clear roadmap for success.
+<h4>Personal Development</h4>
+<p>Identify and overcome obstacles holding you back from living your best life. Whether it's building confidence, breaking bad habits, or discovering your true purpose, we'll work together to create a clear roadmap for success.</p>
 
 
 <img src="images/career-coaching.png" alt=”lavender icon of a briefcase”>
-Career Coaching
-Feeling stuck in your career? We'll help you clarify your goals, develop a plan for advancement, and build the skills needed to thrive in your professional life.
+<h4>Career Coaching</h4>
+<p>Feeling stuck in your career? We'll help you clarify your goals, develop a plan for advancement, and build the skills needed to thrive in your professional life.</p>
 
 
 <img src="images/relationship-coaching.png" alt=”pink icon of a heart”>
-Relationship Coaching
-Enhance your relationships with better communication, understanding, and empathy. Whether it's family, friends, or partners, we'll help you build stronger connections.
+<h4>Relationship Coaching</h4>
+<p>Enhance your relationships with better communication, understanding, and empathy. Whether it's family, friends, or partners, we'll help you build stronger connections.</p>
 
-Group Coaching
+<h3>Group Coaching</h3>
 
 <img src="images/supportive-community.png" alt=”yellow icon of hands clasping”>
-Supportive Community
-Join a group of like-minded individuals on a similar journey. Share experiences, gain insights, and grow together in a safe, supportive environment.
+<h4>Supportive Community</h4>
+<p>Join a group of like-minded individuals on a similar journey. Share experiences, gain insights, and grow together in a safe, supportive environment.</p>
 
 
 <img src="images/focused-session.png" alt=”teal icon of a clock face”>
-Focused Sessions
-Our group coaching sessions focus on specific themes such as confidence-building, time management, or work-life balance. Each session is designed to provide actionable takeaways that you can apply immediately.
+<h4>Focused Sessions</h4>
+<p>Our group coaching sessions focus on specific themes such as confidence-building, time management, or work-life balance. Each session is designed to provide actionable takeaways that you can apply immediately.</p>
 
-Workshops & Seminars
+<h3>Workshops & Seminars</h3>
 
 <img src="images/interactive-learning.png" alt=”lavender icon of text conversation”>
-Interactive Learning
-Participate in our interactive workshops and seminars that cover a range of topics, from goal setting to stress management. These events are designed to provide practical tools and strategies that you can implement in your daily life.
+<h4>Interactive Learning</h4>
+<p>Participate in our interactive workshops and seminars that cover a range of topics, from goal setting to stress management. These events are designed to provide practical tools and strategies that you can implement in your daily life.</p>
 
-Online Courses
+<h3>Online Courses</h3>
 
 <img src="images/flexible-learning.png" alt=”pink icon of a curly arrow”>
-Flexible Learning
-Access our online courses at your convenience. With video lessons, downloadable resources, and exercises, you can learn at your own pace from the comfort of your home.
+<h4>Flexible Learning</h4>
+<p>Access our online courses at your convenience. With video lessons, downloadable resources, and exercises, you can learn at your own pace from the comfort of your home.</p>
 
-Why Choose Us
+<h2>Why Choose Us</h2>
 Personalized Approach
 Proven Results
 Supportive Environment
 Flexible Options
-Pricing
-One-on-One Coaching
+
+<h2>Pricing</h2>
+<h3>One-on-One Coaching</h3>
 
 Service
 Cost
@@ -76,7 +79,7 @@ $550
 $1500
 
 	
-Group Coaching
+<h3>Group Coaching</h3>
 
 Service
 Cost
@@ -86,7 +89,7 @@ Monthly Package
 $250
 
 
-Workshops & Seminars
+<h3>Workshops & Seminars</h3>
 
 Service
 Cost
@@ -96,7 +99,7 @@ Seminar Series
 $250
 
 
-Online Courses
+<h3>Online Courses</h3>
 
 Service
 Cost
@@ -107,13 +110,14 @@ $250
 </main>
 
 <footer>
-Take the First Step Today
-Your journey to a more fulfilling life begins with a single step. Book a free 30-minute consultation today to discover how our coaching services can help you achieve your goals. Let's work together to create the life you've always dreamed of!
+<h2>Take the First Step Today</h2>
+<p>Your journey to a more fulfilling life begins with a single step. Book a free 30-minute consultation today to discover how our coaching services can help you achieve your goals. Let's work together to create the life you've always dreamed of!</p>
 
 Schedule Now
 
 <small>Copyright 2024</small> 
 <small>Terms and Conditions</small>
 </footer>
+</body>
 
 </html>
