--- a/index.html
+++ b/index.html
@@ -10,12 +10,16 @@
 <body>
 <header>
 <h1>Path to Success</h1>
-Unlock your full potential with personalized life coaching
-Menu
-Our Services
-Why Choose Us
-Prices
-Take the First Step
+<p>Unlock your full potential with personalized life coaching</p>
+    
+    <nav>
+        <button>Menu</button>
+
+        <a>Our Services</a>
+        <a>Why Choose Us</a>
+        <a>Prices</a>
+        <a>Take the First Step</a>
+    </nav>
 </header>
 
 <main>
@@ -91,57 +95,82 @@ Take the First Step
 <h2>Pricing</h2>
 <h3>One-on-One Coaching</h3>
 
-Service
-Cost
-Single Session
-$150
-Monthly Package
-$550
-3-month Package
-$1500
+    <tr>
+        <th>Service</th>
+        <th>Cost </th>   
+    </tr>
 
+    <tr>
+        <td>Single Session</td>
+        <td>$150</td>
+    </tr>
+    <tr>
+        <td>Monthly Package</td>
+        <td>$550</td>
+    </tr>
+    <tr>
+        <td>3-month Package</td>
+        <td>$1500</td>
+    </tr>
 	
 <h3>Group Coaching</h3>
 
-Service
-Cost
-Single Session
-$75
-Monthly Package
-$250
+    <tr>
+        <th>Service</th>
+        <th>Cost  </th>      
+    </tr>
 
+    <tr>
+        <td>Single Session</td>
+        <td>$75</td>
+    </tr> 
+    <tr>
+        <td>Monthly Package</td>
+        <td>$250 </td>       
+    </tr>   
 
 <h3>Workshops & Seminars</h3>
 
-Service
-Cost
-Single Workshop
-$150
-Seminar Series
-$250
+    <tr>
+        <th>Service</th>
+        <th>Cost</th>
+    </tr>
 
+    <tr>
+        <td>Single Workshop</td>
+        <td>$150</td>
+    </tr>
+    <tr>
+        <td>Seminar Series</td>
+        <td>$250</td>
+    </tr>
 
 <h3>Online Courses</h3>
 
-Service
-Cost
-Single Workshop
-$150
-Webinar Series
-$250
+    <tr>
+        <th>Service</th>
+        <th>Cost</th>        
+    </tr>
+
+    <tr>
+        <td>Single Workshop</td>
+        <td>$150</td>
+    </tr>
+    <tr>
+        <td>Webinar Series</td>
+        <td>$250</td>
+    </tr>
 </article>
 </main>
 
 <footer>
-    <aside>
-        <h2>Take the First Step Today</h2>
-        <p>Your journey to a more fulfilling life begins with a single step. Book a free 30-minute consultation today to discover how our coaching services can help you achieve your goals. Let's work together to create the life you've always dreamed of!</p>
-    </aside>
+    <h2>Take the First Step Today</h2>
+    <p>Your journey to a more fulfilling life begins with a single step. Book a free 30-minute consultation today to discover how our coaching services can help you achieve your goals. Let's work together to create the life you've always dreamed of!</p>
 
-    <a href="#">Schedule Now</a>   
+    <button>Schedule Now</button>   
 
-<small>Copyright 2024</small> 
-<small>Terms and Conditions</small>
+    <small>Copyright 2024</small> 
+    <small>Terms and Conditions</small>
 </footer>
 </body>
 
