--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
 <h1>Path to Success</h1>
 <p>Unlock your full potential with personalized life coaching</p>
     
-    <nav>
-        <button>Menu</button>
+    <a>Menu</a>
 
-        <a>Our Services</a>
-        <a>Why Choose Us</a>
-        <a>Prices</a>
-        <a>Take the First Step</a>
+    <nav>
+        <a href="#our-services"><li>Our Services</li></a>
+        <a href="#whychoose"><li>Why Choose Us</li></a>
+        <a href="#pricing"><li>Prices</li></a>
+        <a href="#first-step"><li>Take the First Step</li></a>
     </nav>
 </header>
 
 <main>
-<h2>Our Services</h2>
+<h2 id="our-services">Our Services</h2>
 
 <article>
 <h3>One-on-One Coaching</h3>    
@@ -84,7 +84,7 @@
 </article>
 
 <article>
-<h2>Why Choose Us</h2>
+<h2 id="whychoose">Why Choose Us</h2>
     <section>Personalized Approach</section>
     <section>Proven Results</section>
     <section>Supportive Environment</section>
@@ -92,7 +92,7 @@
 </article>
 
 <article>
-<h2>Pricing</h2>
+<h2 id="pricing">Pricing</h2>
 
 <h3>One-on-One Coaching</h3>
     <table>
@@ -177,10 +177,10 @@
 </main>
 
 <footer>
-    <h2>Take the First Step Today</h2>
+    <h2 id="first-step">Take the First Step Today</h2>
     <p>Your journey to a more fulfilling life begins with a single step. Book a free 30-minute consultation today to discover how our coaching services can help you achieve your goals. Let's work together to create the life you've always dreamed of!</p>
 
-    <button>Schedule Now</button>   
+    <a>Schedule Now</a>   
 
     <small>Copyright 2024</small> 
     <small>Terms and Conditions</small>
