--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
     
 
         <ul>
-            <a href="#our-services"><li>Our Services</li></a>
-            <a href="#whychoose"><li>Why Choose Us</li></a>
-            <a href="#pricing"><li>Prices</li></a>
-            <a href="#first-step"><li>Take the First Step</li></a>
-            <a href="#menu">Menu</a>
+            <li><a href="#our-services">Our Services</a></li>
+            <li><a href="#whychoose">Why Choose Us</a></li>
+            <li><a href="#pricing">Prices</a></li>
+            <li><a href="#first-step">Take the First Step</li></a>
+            <li><a href="#menu">Menu</a></li>
         </ul>
 </nav>
 </header>
@@ -33,19 +33,19 @@
 <h3>One-on-One Coaching</h3>  
 
     <article>
-        <img src="images/personal-development.png"alt=”teal icon of a smiling face”>
+        <img src="images/personal-development.png"alt=”teal icon of a smiling face” width="20%" height="20%">
         <h4>Personal Development</h4>
         <p>Identify and overcome obstacles holding you back from living your best life. Whether it's building confidence, breaking bad habits, or discovering your true purpose, we'll work together to create a clear roadmap for success.</p>
     </article>
 
     <article>
-        <img src="images/career-coaching.png" alt=”lavender icon of a briefcase”>
+        <img src="images/career-coaching.png" alt=”lavender icon of a briefcase” width="20%" height="20%">
         <h4>Career Coaching</h4>
         <p>Feeling stuck in your career? We'll help you clarify your goals, develop a plan for advancement, and build the skills needed to thrive in your professional life.</p>
     </article>
 
     <article>
-        <img src="images/relationship-coaching.png" alt=”pink icon of a heart”>
+        <img src="images/relationship-coaching.png" alt=”pink icon of a heart” width="20%" height="20%">
         <h4>Relationship Coaching</h4>
         <p>Enhance your relationships with better communication, understanding, and empathy. Whether it's family, friends, or partners, we'll help you build stronger connections.</p>
     </article>
@@ -55,13 +55,13 @@
 <h3>Group Coaching</h3>
 
     <article>
-        <img src="images/supportive-community.png" alt=”yellow icon of hands clasping”>
+        <img src="images/supportive-community.png" alt=”yellow icon of hands clasping” width="20%" height="20%">
         <h4>Supportive Community</h4>
         <p>Join a group of like-minded individuals on a similar journey. Share experiences, gain insights, and grow together in a safe, supportive environment.</p>
     </article>
 
     <article>
-        <img src="images/focused-session.png" alt=”teal icon of a clock face”>
+        <img src="images/focused-session.png" alt=”teal icon of a clock face” width="20%" height="20%">
         <h4>Focused Sessions</h4>
         <p>Our group coaching sessions focus on specific themes such as confidence-building, time management, or work-life balance. Each session is designed to provide actionable takeaways that you can apply immediately.</p>
     </article>
@@ -71,7 +71,7 @@
 <h3>Workshops & Seminars</h3>    
 
     <article>
-        <img src="images/interactive-learning.png" alt=”lavender icon of text conversation”>
+        <img src="images/interactive-learning.png" alt=”lavender icon of text conversation” width="20%" height="20%">
         <h4>Interactive Learning</h4>
         <p>Participate in our interactive workshops and seminars that cover a range of topics, from goal setting to stress management. These events are designed to provide practical tools and strategies that you can implement in your daily life.</p>
     </article>
@@ -81,7 +81,7 @@
 <h3>Online Courses</h3>
 
     <article>
-        <img src="images/flexible-learning.png" alt=”pink icon of a curly arrow”>
+        <img src="images/flexible-learning.png" alt=”pink icon of a curly arrow” width="20%" height="20%">
         <h4>Flexible Learning</h4>
         <p>Access our online courses at your convenience. With video lessons, downloadable resources, and exercises, you can learn at your own pace from the comfort of your home.</p>
     </article>
