--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
 </head>
 
 <body>
-<header>
+<header>    
 <h1>Path to Success</h1>
-<p>Unlock your full potential with personalized life coaching</p>
-    
+<p>Unlock your full potential <span class="potential"> with personalized life coaching</span></p>    
     
 <nav>    
 <a href="#menu">Menu</a>
