--- a/index.html
+++ b/index.html
@@ -8,10 +8,7 @@
 </head>
 
 <body>
-<header>    
-<h1>Path to Success</h1>
-<p>Unlock your full potential <span class="potential"> with personalized life coaching</span></p>    
-    
+<header>   
 <nav>    
 <a href="#menu">Menu</a>
         <ul class="menu"> 
@@ -20,7 +17,11 @@
             <li><a href="#pricing">Prices</a></li>
             <li><a href="#first-step">Take the First Step</li></a>
         </ul>
-</nav>
+</nav>    
+    
+<h1>Path to Success</h1>
+<small>Unlock your full potential <span class="potential"> with personalized life coaching</span></small>    
+
 </header>
 
 <main>
