Finish the small view
Small view is complete

--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
 </head>
 
 <body>
-<header>   
-<nav>    
+<header>
+<h1>Path to Success</h1>          
+<small> <i>Unlock your full potential</i> <span class="potential"> with personalized life coaching</span></small>    
+
+
+<nav>
 <a href="#menu">Menu</a>
         <ul class="menu"> 
             <li><a href="#our-services">Our Services</a></li>
@@ -17,11 +21,7 @@
             <li><a href="#pricing">Prices</a></li>
             <li><a href="#first-step">Take the First Step</li></a>
         </ul>
-</nav>    
-    
-<h1>Path to Success</h1>
-<small>Unlock your full potential <span class="potential"> with personalized life coaching</span></small>    
-
+</nav> 
 </header>
 
 <main>
@@ -188,7 +188,7 @@
 </main>
 
 <footer>
-    <small>Copyright 2024</small> &nbsp;
+    <small>Copyright 2024</small> &nbsp; &nbsp; &nbsp;
     <small>Terms and Conditions</small>
 </footer>
 </body>
