@Start medium viewport
Show the full potential part

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <header>
 <h1>Path to Success</h1>          
-<small> <i>Unlock your full potential</i> <span class="potential"> with personalized life coaching</span></small>    
+<small><i>Unlock your full potential<span class="potential"> with personalized life coaching</i></span></small>    
 
 
 <nav>
