--- a/index.html
+++ b/index.html
@@ -26,39 +26,38 @@
 
 <main>
 <h2 id="our-services">Our Services</h2>
-
+<h3>One-on-One Coaching</h3> 
+ 
 <div id="o-o">
-<h3>One-on-One Coaching</h3>  
-
-    <article>
+    <article id="personal-development">
         <img src="images/personal-development.png"alt=”teal icon of a smiling face” width="20%" height="20%">
         <h4>Personal Development</h4>
         <p>Identify and overcome obstacles holding you back from living your best life. Whether it's building confidence, breaking bad habits, or discovering your true purpose, we'll work together to create a clear roadmap for success.</p>
     </article>
 
-    <article>
+    <article id="career-coaching">
         <img src="images/career-coaching.png" alt=”lavender icon of a briefcase” width="20%" height="20%">
         <h4>Career Coaching</h4>
         <p>Feeling stuck in your career? We'll help you clarify your goals, develop a plan for advancement, and build the skills needed to thrive in your professional life.</p>
     </article>
+</div>    
 
-    <article>
+    <article id="relationship-coaching">
         <img src="images/relationship-coaching.png" alt=”pink icon of a heart” width="20%" height="20%">
         <h4>Relationship Coaching</h4>
         <p>Enhance your relationships with better communication, understanding, and empathy. Whether it's family, friends, or partners, we'll help you build stronger connections.</p>
     </article>
-</div>
 
-<div id="g-c">
 <h3>Group Coaching</h3>
 
-    <article>
+<div id="g-c">
+    <article id="supportive-community">
         <img src="images/supportive-community.png" alt=”yellow icon of hands clasping” width="20%" height="20%">
         <h4>Supportive Community</h4>
         <p>Join a group of like-minded individuals on a similar journey. Share experiences, gain insights, and grow together in a safe, supportive environment.</p>
     </article>
 
-    <article>
+    <article id="focused-session">
         <img src="images/focused-session.png" alt=”teal icon of a clock face” width="20%" height="20%">
         <h4>Focused Sessions</h4>
         <p>Our group coaching sessions focus on specific themes such as confidence-building, time management, or work-life balance. Each session is designed to provide actionable takeaways that you can apply immediately.</p>
@@ -68,7 +67,7 @@
 <div id="w-s">
 <h3>Workshops & Seminars</h3>    
 
-    <article>
+    <article id="interactive-learning">
         <img src="images/interactive-learning.png" alt=”lavender icon of text conversation” width="20%" height="20%">
         <h4>Interactive Learning</h4>
         <p>Participate in our interactive workshops and seminars that cover a range of topics, from goal setting to stress management. These events are designed to provide practical tools and strategies that you can implement in your daily life.</p>
@@ -78,7 +77,7 @@
 <div id="o-c">
 <h3>Online Courses</h3>
 
-    <article>
+    <article id="flexible-learning">
         <img src="images/flexible-learning.png" alt=”pink icon of a curly arrow” width="20%" height="20%">
         <h4>Flexible Learning</h4>
         <p>Access our online courses at your convenience. With video lessons, downloadable resources, and exercises, you can learn at your own pace from the comfort of your home.</p>
@@ -95,95 +94,113 @@
     </section>
 </div>
 
-<div id="price">
 <h2 id="pricing">Pricing</h2>
+<div id="price">
 
-<h3>One-on-One Coaching</h3>
-    <table>
-    <thead>
-        <tr>
-            <th>Service</th>
-            <th>Cost </th>   
-        </tr>
-    </thead>
+    <div id="One-on-One">
+    <h3>One-on-One Coaching</h3>
+    
+        <table>
+        <thead>
+            <tr>
+                <th>Service</th>
+                <th>Cost </th>   
+            </tr>
+        </thead>
 
-        <tr>
-            <td>Single Session</td>
-            <td>$150</td>
-        </tr>
-        <tr>
-            <td>Monthly Package</td>
-            <td>$550</td>
-        </tr>
-        <tr>
-            <td>3-month Package</td>
-            <td>$1500</td>
-        </tr>
-	</table>
+            <tr>
+                <td>Single Session</td>
+                <td>$150</td>
+            </tr>
+            <tr>
+                <td>Monthly Package</td>
+                <td>$550</td>
+            </tr>
+            <tr>
+                <td>3-month Package</td>
+                <td>$1500</td>
+            </tr>
+	    </table>
+    </div>
 
-<h3>Group Coaching</h3>
-    <table>
-    <thead>
-        <tr>
-            <th>Service</th>
-            <th>Cost  </th>      
-        </tr>
-    </thead>
+    <div id="group-coaching">
+    <h3>Group Coaching</h3>
 
-        <tr>
-            <td>Single Session</td>
-            <td>$75</td>
-        </tr> 
-        <tr>
-            <td>Monthly Package</td>
-            <td>$250 </td>       
-        </tr>   
-    </table>
+        <table>
+        <thead>
+            <tr>
+                <th>Service</th>
+                <th>Cost  </th>      
+            </tr>
+        </thead>
 
-<h3>Workshops & Seminars</h3>
-    <table>
-    <thead>
-        <tr>
-            <th>Service</th>
-            <th>Cost</th>
-        </tr>
-    </thead>
-
-        <tr>
-            <td>Single Workshop</td>
-            <td>$150</td>
-        </tr>
-        <tr>
-            <td>Seminar Series</td>
-            <td>$250</td>
-        </tr>
+            <tr>
+                <td>Single Session</td>
+                <td>$75</td>
+            </tr> 
+            <tr>
+                <td>Monthly Package</td>
+                <td>$250 </td>       
+            </tr>   
         </table>
+    </div>
 
-<h3>Online Courses</h3>
-    <table>
-    <thead>
-        <tr>
-            <th>Service</th>
-            <th>Cost</th>        
-        </tr>
-    </thead>
+    <div id="workshops">
+    <h3>Workshops & Seminars</h3>
 
-        <tr>
-            <td>Single Workshop</td>
-            <td>$150</td>
-        </tr>
-        <tr>
-            <td>Webinar Series</td>
-            <td>$250</td>
-        </tr>
-    </table>
+        <table>
+        <thead>
+            <tr>
+                <th>Service</th>
+                <th>Cost</th>
+            </tr>
+        </thead>
+
+            <tr>
+                <td>Single Workshop</td>
+                <td>$150</td>
+            </tr>
+            <tr>
+                <td>Seminar Series</td>
+                <td>$250</td>
+            </tr>
+        </table>
+    </div>
+
+    <div id="online">
+    <h3>Online Courses</h3>
+        <table>
+        <thead>
+            <tr>
+                <th>Service</th>
+                <th>Cost</th>        
+            </tr>
+        </thead>
+
+            <tr>
+                <td>Single Workshop</td>
+                <td>$150</td>
+            </tr>
+            <tr>
+                <td>Webinar Series</td>
+                <td>$250</td>
+            </tr>
+        </table>
+    </div>
+
 </div>
 
 <section class="first">
-    <h2 id="first-step">Take the First Step Today</h2>
-    <p>Your journey to a more fulfilling life begins with a single step. Book a free 30-minute consultation today to discover how our coaching services can help you achieve your goals. Let's work together to create the life you've always dreamed of!</p>
+<h2 id="first-step">Take the First Step Today</h2>
 
-    <a href="#">Schedule Now</a>   
+    <div>
+        
+        <p>Your journey to a more fulfilling life begins with a single step. Book a free 30-minute consultation today to discover how our coaching services can help you achieve your goals. Let's work together to create the life you've always dreamed of!</p>
+    </div>
+
+    <div>
+        <a href="#">Schedule Now</a>   
+    </div>    
 </section>    
 </main>
 
