--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <header>
 <h1>Path to Success</h1>          
-<small><i>Unlock your full potential<span class="potential"> with personalized life coaching</i></span></small>    
+<small><i>Unlock your full potential<span class="potential"> with personalized life coaching</span></i></small>    
 
 
 <nav>
@@ -19,7 +19,7 @@
             <li><a href="#our-services">Our Services</a></li>
             <li><a href="#whychoose">Why Choose Us</a></li>
             <li><a href="#pricing">Prices</a></li>
-            <li><a href="#first-step">Take the First Step</li></a>
+            <li><a href="#first-step">Take the First Step</a></li>
         </ul>
 </nav> 
 </header>
@@ -30,20 +30,20 @@
  
 <div id="o-o">
     <article id="personal-development">
-        <img src="images/personal-development.png"alt=”teal icon of a smiling face” width="20%" height="20%">
+        <img src="images/personal-development.png" alt="teal icon of a smiling face">
         <h4>Personal Development</h4>
         <p>Identify and overcome obstacles holding you back from living your best life. Whether it's building confidence, breaking bad habits, or discovering your true purpose, we'll work together to create a clear roadmap for success.</p>
     </article>
 
     <article id="career-coaching">
-        <img src="images/career-coaching.png" alt=”lavender icon of a briefcase” width="20%" height="20%">
+        <img src="images/career-coaching.png" alt= "lavender icon of a briefcase">
         <h4>Career Coaching</h4>
         <p>Feeling stuck in your career? We'll help you clarify your goals, develop a plan for advancement, and build the skills needed to thrive in your professional life.</p>
     </article>
 </div>    
 
     <article id="relationship-coaching">
-        <img src="images/relationship-coaching.png" alt=”pink icon of a heart” width="20%" height="20%">
+        <img src="images/relationship-coaching.png" alt= "pink icon of a heart">
         <h4>Relationship Coaching</h4>
         <p>Enhance your relationships with better communication, understanding, and empathy. Whether it's family, friends, or partners, we'll help you build stronger connections.</p>
     </article>
@@ -52,13 +52,13 @@
 
 <div id="g-c">
     <article id="supportive-community">
-        <img src="images/supportive-community.png" alt=”yellow icon of hands clasping” width="20%" height="20%">
+        <img src="images/supportive-community.png" alt= "yellow icon of hands clasping">
         <h4>Supportive Community</h4>
         <p>Join a group of like-minded individuals on a similar journey. Share experiences, gain insights, and grow together in a safe, supportive environment.</p>
     </article>
 
     <article id="focused-session">
-        <img src="images/focused-session.png" alt=”teal icon of a clock face” width="20%" height="20%">
+        <img src="images/focused-session.png" alt= "teal icon of a clock face">
         <h4>Focused Sessions</h4>
         <p>Our group coaching sessions focus on specific themes such as confidence-building, time management, or work-life balance. Each session is designed to provide actionable takeaways that you can apply immediately.</p>
     </article>
@@ -68,7 +68,7 @@
 <h3>Workshops & Seminars</h3>    
 
     <article id="interactive-learning">
-        <img src="images/interactive-learning.png" alt=”lavender icon of text conversation” width="20%" height="20%">
+        <img src="images/interactive-learning.png" alt= "lavender icon of text conversation">
         <h4>Interactive Learning</h4>
         <p>Participate in our interactive workshops and seminars that cover a range of topics, from goal setting to stress management. These events are designed to provide practical tools and strategies that you can implement in your daily life.</p>
     </article>
@@ -78,7 +78,7 @@
 <h3>Online Courses</h3>
 
     <article id="flexible-learning">
-        <img src="images/flexible-learning.png" alt=”pink icon of a curly arrow” width="20%" height="20%">
+        <img src="images/flexible-learning.png" alt= "pink icon of a curly arrow">
         <h4>Flexible Learning</h4>
         <p>Access our online courses at your convenience. With video lessons, downloadable resources, and exercises, you can learn at your own pace from the comfort of your home.</p>
     </article>
