Changes to media 950px
Did css style changes for the first half

--- a/index.html
+++ b/index.html
@@ -25,10 +25,11 @@
 </header>
 
 <main>
-<h2 id="our-services">Our Services</h2>
-<h3>One-on-One Coaching</h3> 
- 
+<h2 id="our-services">Our Services</h2>    
+
+<section id="services">    
 <div id="o-o">
+<h3>One-on-One Coaching</h3>     
     <article id="personal-development">
         <img src="images/personal-development.png" alt="teal icon of a smiling face">
         <h4>Personal Development</h4>
@@ -40,17 +41,17 @@
         <h4>Career Coaching</h4>
         <p>Feeling stuck in your career? We'll help you clarify your goals, develop a plan for advancement, and build the skills needed to thrive in your professional life.</p>
     </article>
-</div>    
-
+    
     <article id="relationship-coaching">
         <img src="images/relationship-coaching.png" alt= "pink icon of a heart">
         <h4>Relationship Coaching</h4>
         <p>Enhance your relationships with better communication, understanding, and empathy. Whether it's family, friends, or partners, we'll help you build stronger connections.</p>
     </article>
+</div>
 
-<h3>Group Coaching</h3>
 
 <div id="g-c">
+<h3>Group Coaching</h3>
     <article id="supportive-community">
         <img src="images/supportive-community.png" alt= "yellow icon of hands clasping">
         <h4>Supportive Community</h4>
@@ -64,9 +65,9 @@
     </article>
 </div>
 
+    
 <div id="w-s">
-<h3>Workshops & Seminars</h3>    
-
+<h3>Workshops & Seminars</h3>
     <article id="interactive-learning">
         <img src="images/interactive-learning.png" alt= "lavender icon of text conversation">
         <h4>Interactive Learning</h4>
@@ -74,15 +75,16 @@
     </article>
 </div>
 
+
 <div id="o-c">
 <h3>Online Courses</h3>
-
     <article id="flexible-learning">
         <img src="images/flexible-learning.png" alt= "pink icon of a curly arrow">
         <h4>Flexible Learning</h4>
         <p>Access our online courses at your convenience. With video lessons, downloadable resources, and exercises, you can learn at your own pace from the comfort of your home.</p>
     </article>
 </div>
+</section>
 
 <div id="ychoose">
     <h2>Why Choose Us</h2>
@@ -93,6 +95,7 @@
         <div id="white">Flexible Options</div>
     </section>
 </div>
+
 
 <h2 id="pricing">Pricing</h2>
 <div id="price">
