Finished media 950px and 1280px
Final touches and went back to go over all the media

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 </div>
 
 
-<h2 id="pricing">Pricing</h2>
+<h2>Pricing</h2>
 <div id="price">
 
     <div id="One-on-One">
@@ -208,8 +208,10 @@
 </main>
 
 <footer>
+    <div id="foot">
     <small>Copyright 2024</small> &nbsp; &nbsp; &nbsp;
     <small>Terms and Conditions</small>
+    </div>
 </footer>
 </body>
 
