--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
 <div id="ychoose">
     <h2>Why Choose Us</h2>
     <section id="whychoose">
+        <h2>Why Choose Us</h2>
         <div id="green">Personalized Approach</div>
         <div id="purple">Proven Results</div>
         <div id="yellow">Supportive Environment</div>
